k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: division-deployment
  namespace: microservices-qa
spec:
  replicas: 3
  selector:
    matchLabels:
      app: division
  template:
    metadata:
      labels:
        app: division
    spec:
      containers:
      - name: division
        image: carlosdelgadillo/division:v2
        ports:
        - containerPort: 8006
