k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: division-service
  namespace: microservices-qa
spec:
  selector:
    app: division
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8006
  type: LoadBalancer
