k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: division-ingress
  namespace: microservices-ci
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: division.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: division-service
            port:
              number: 80
